[metadata]
name = lmbison
description = Package of Lifemapper-Bison objects and tools
long_description = file: README.2022.v1.1.md
long_description_content_type = text/markdown
url = https://github.com/lifemapper/bison
author = Specify Systems Lifemapper Team
author_email = aimee.stewart@ku.edu
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/lifemapper/bison/issues

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = bison

[options.entry_points]
console_scripts =
    aggregate_summary = bison.tools.aggregate_summary:cli
    annotate_gbif = bison.tools.annotate_gbif:cli
    annotate_riis = bison.tools.annotate_riis:cli
    chunk_large_file = bison.tools.chunk_large_file:cli
    combine_summaries = bison.tools.combine_summaries:cli
    count_summaries = bison.tools.count_summaries:cli
    summarize_annotations = bison.tools.summarize_annotations:cli

[versioneer]
vcs = git
style = pep440-pre
tag_prefix = ''
